frontend/Parser.output
   0  $accept : Program $end

   1  Program : ClassList

   2  ClassList : ClassList ClassDef
   3            | ClassDef

   4  VariableDef : Variable ';'

   5  Variable : Type IDENTIFIER

   6  Type : INT
   7       | VOID
   8       | BOOL
   9       | STRING
  10       | CLASS IDENTIFIER
  11       | Type '[' ']'

  12  ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}'

  13  ExtendsClause : EXTENDS IDENTIFIER
  14                |

  15  FieldList : FieldList VariableDef
  16            | FieldList FunctionDef
  17            |

  18  Formals : VariableList
  19          |

  20  VariableList : VariableList ',' Variable
  21               | Variable

  22  FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock
  23              | Type IDENTIFIER '(' Formals ')' StmtBlock

  24  StmtBlock : '{' StmtList '}'

  25  StmtList : StmtList Stmt
  26           |

  27  Stmt : VariableDef
  28       | SimpleStmt ';'
  29       | IfStmt
  30       | SwitchStmt
  31       | RepeatUntil
  32       | WhileStmt
  33       | ForStmt
  34       | ReturnStmt ';'
  35       | PrintStmt ';'
  36       | BreakStmt ';'
  37       | StmtBlock
  38       | ADDONE Expr ';'
  39       | Expr ADDONE ';'
  40       | SUBONE Expr ';'
  41       | Expr SUBONE ';'

  42  SimpleStmt : LValue '=' Expr
  43             | Call
  44             |

  45  Receiver : Expr '.'
  46           |

  47  LValue : Receiver IDENTIFIER
  48         | Expr '[' Expr ']'

  49  Call : Receiver IDENTIFIER '(' Actuals ')'

  50  Expr : LValue
  51       | Call
  52       | Constant
  53       | Expr '+' Expr
  54       | Expr '-' Expr
  55       | Expr '*' Expr
  56       | Expr '/' Expr
  57       | Expr '%' Expr
  58       | Expr EQUAL Expr
  59       | Expr NOT_EQUAL Expr
  60       | Expr '<' Expr
  61       | Expr '>' Expr
  62       | Expr LESS_EQUAL Expr
  63       | Expr GREATER_EQUAL Expr
  64       | Expr AND Expr
  65       | Expr OR Expr
  66       | '(' Expr ')'
  67       | '-' Expr
  68       | ADDONE Expr
  69       | Expr ADDONE
  70       | SUBONE Expr
  71       | Expr SUBONE
  72       | '!' Expr
  73       | Expr '?' Expr ':' Expr
  74       | READ_INTEGER '(' ')'
  75       | READ_LINE '(' ')'
  76       | THIS
  77       | NEW IDENTIFIER '(' ')'
  78       | NEW Type '[' Expr ']'
  79       | INSTANCEOF '(' Expr ',' IDENTIFIER ')'
  80       | '(' CLASS IDENTIFIER ')' Expr

  81  Constant : LITERAL
  82           | NULL

  83  Actuals : ExprList
  84          |

  85  ExprList : ExprList ',' Expr
  86           | Expr

  87  WhileStmt : WHILE '(' Expr ')' Stmt

  88  ForStmt : FOR '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt

  89  RepeatUntil : REPEAT Stmt UNTIL Expr

  90  BreakStmt : BREAK

  91  IfStmt : IF '(' Expr ')' Stmt ElseClause

  92  CaseStmt : CASE Constant ':' StmtList

  93  DefaultStmt : DEFAULT ':' StmtList

  94  SwitchStmt : SWITCH '(' Expr ')' '{' SwitchBlock '}'

  95  SwitchBlock : SwitchBlock CaseStmt
  96              | SwitchBlock DefaultStmt
  97              |

  98  ElseClause : ELSE Stmt
  99             |

 100  ReturnStmt : RETURN Expr
 101             | RETURN

 102  PrintStmt : PRINT '(' ExprList ')'

state 0
	$accept : . Program $end  (0)

	CLASS  shift 1
	.  error

	Program  goto 2
	ClassList  goto 3
	ClassDef  goto 4


state 1
	ClassDef : CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (12)

	IDENTIFIER  shift 5
	.  error


state 2
	$accept : Program . $end  (0)

	$end  accept


state 3
	Program : ClassList .  (1)
	ClassList : ClassList . ClassDef  (2)

	CLASS  shift 1
	$end  reduce 1

	ClassDef  goto 6


state 4
	ClassList : ClassDef .  (3)

	.  reduce 3


state 5
	ClassDef : CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (12)
	ExtendsClause : .  (14)

	EXTENDS  shift 7
	'{'  reduce 14

	ExtendsClause  goto 8


state 6
	ClassList : ClassList ClassDef .  (2)

	.  reduce 2


state 7
	ExtendsClause : EXTENDS . IDENTIFIER  (13)

	IDENTIFIER  shift 9
	.  error


state 8
	ClassDef : CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (12)

	'{'  shift 10
	.  error


state 9
	ExtendsClause : EXTENDS IDENTIFIER .  (13)

	.  reduce 13


state 10
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (12)
	FieldList : .  (17)

	.  reduce 17

	FieldList  goto 11


state 11
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (12)
	FieldList : FieldList . VariableDef  (15)
	FieldList : FieldList . FunctionDef  (16)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	STATIC  shift 17
	'}'  shift 18
	.  error

	VariableDef  goto 19
	Variable  goto 20
	Type  goto 21
	FunctionDef  goto 22


state 12
	Type : VOID .  (7)

	.  reduce 7


state 13
	Type : BOOL .  (8)

	.  reduce 8


state 14
	Type : INT .  (6)

	.  reduce 6


state 15
	Type : STRING .  (9)

	.  reduce 9


state 16
	Type : CLASS . IDENTIFIER  (10)

	IDENTIFIER  shift 23
	.  error


state 17
	FunctionDef : STATIC . Type IDENTIFIER '(' Formals ')' StmtBlock  (22)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	.  error

	Type  goto 24


state 18
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (12)

	.  reduce 12


state 19
	FieldList : FieldList VariableDef .  (15)

	.  reduce 15


state 20
	VariableDef : Variable . ';'  (4)

	';'  shift 25
	.  error


state 21
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)
	FunctionDef : Type . IDENTIFIER '(' Formals ')' StmtBlock  (23)

	IDENTIFIER  shift 26
	'['  shift 27
	.  error


state 22
	FieldList : FieldList FunctionDef .  (16)

	.  reduce 16


state 23
	Type : CLASS IDENTIFIER .  (10)

	.  reduce 10


state 24
	Type : Type . '[' ']'  (11)
	FunctionDef : STATIC Type . IDENTIFIER '(' Formals ')' StmtBlock  (22)

	IDENTIFIER  shift 28
	'['  shift 27
	.  error


state 25
	VariableDef : Variable ';' .  (4)

	.  reduce 4


state 26
	Variable : Type IDENTIFIER .  (5)
	FunctionDef : Type IDENTIFIER . '(' Formals ')' StmtBlock  (23)

	'('  shift 29
	';'  reduce 5


state 27
	Type : Type '[' . ']'  (11)

	']'  shift 30
	.  error


state 28
	FunctionDef : STATIC Type IDENTIFIER . '(' Formals ')' StmtBlock  (22)

	'('  shift 31
	.  error


state 29
	FunctionDef : Type IDENTIFIER '(' . Formals ')' StmtBlock  (23)
	Formals : .  (19)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	')'  reduce 19

	Variable  goto 32
	Type  goto 33
	Formals  goto 34
	VariableList  goto 35


state 30
	Type : Type '[' ']' .  (11)

	.  reduce 11


state 31
	FunctionDef : STATIC Type IDENTIFIER '(' . Formals ')' StmtBlock  (22)
	Formals : .  (19)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	')'  reduce 19

	Variable  goto 32
	Type  goto 33
	Formals  goto 36
	VariableList  goto 35


state 32
	VariableList : Variable .  (21)

	.  reduce 21


state 33
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)

	IDENTIFIER  shift 37
	'['  shift 27
	.  error


state 34
	FunctionDef : Type IDENTIFIER '(' Formals . ')' StmtBlock  (23)

	')'  shift 38
	.  error


state 35
	Formals : VariableList .  (18)
	VariableList : VariableList . ',' Variable  (20)

	','  shift 39
	')'  reduce 18


state 36
	FunctionDef : STATIC Type IDENTIFIER '(' Formals . ')' StmtBlock  (22)

	')'  shift 40
	.  error


state 37
	Variable : Type IDENTIFIER .  (5)

	.  reduce 5


state 38
	FunctionDef : Type IDENTIFIER '(' Formals ')' . StmtBlock  (23)

	'{'  shift 41
	.  error

	StmtBlock  goto 42


state 39
	VariableList : VariableList ',' . Variable  (20)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	.  error

	Variable  goto 43
	Type  goto 33


state 40
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' . StmtBlock  (22)

	'{'  shift 41
	.  error

	StmtBlock  goto 44


state 41
	StmtBlock : '{' . StmtList '}'  (24)
	StmtList : .  (26)

	.  reduce 26

	StmtList  goto 45


state 42
	FunctionDef : Type IDENTIFIER '(' Formals ')' StmtBlock .  (23)

	.  reduce 23


state 43
	VariableList : VariableList ',' Variable .  (20)

	.  reduce 20


state 44
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock .  (22)

	.  reduce 22


state 45
	StmtBlock : '{' StmtList . '}'  (24)
	StmtList : StmtList . Stmt  (25)
	SimpleStmt : .  (44)
	Receiver : .  (46)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	NULL  shift 46
	THIS  shift 47
	WHILE  shift 48
	FOR  shift 49
	REPEAT  shift 50
	IF  shift 51
	SWITCH  shift 52
	RETURN  shift 53
	BREAK  shift 54
	NEW  shift 55
	PRINT  shift 56
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 59
	INSTANCEOF  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	'{'  shift 41
	'}'  shift 64
	ADDONE  shift 65
	SUBONE  shift 66
	IDENTIFIER  reduce 46
	';'  reduce 44

	VariableDef  goto 67
	Variable  goto 20
	Type  goto 33
	StmtBlock  goto 68
	Stmt  goto 69
	SimpleStmt  goto 70
	IfStmt  goto 71
	SwitchStmt  goto 72
	RepeatUntil  goto 73
	WhileStmt  goto 74
	ForStmt  goto 75
	ReturnStmt  goto 76
	PrintStmt  goto 77
	BreakStmt  goto 78
	Expr  goto 79
	LValue  goto 80
	Call  goto 81
	Receiver  goto 82
	Constant  goto 83


state 46
	Constant : NULL .  (82)

	.  reduce 82


state 47
	Expr : THIS .  (76)

	.  reduce 76


state 48
	WhileStmt : WHILE . '(' Expr ')' Stmt  (87)

	'('  shift 84
	.  error


state 49
	ForStmt : FOR . '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (88)

	'('  shift 85
	.  error


state 50
	RepeatUntil : REPEAT . Stmt UNTIL Expr  (89)
	SimpleStmt : .  (44)
	Receiver : .  (46)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	NULL  shift 46
	THIS  shift 47
	WHILE  shift 48
	FOR  shift 49
	REPEAT  shift 50
	IF  shift 51
	SWITCH  shift 52
	RETURN  shift 53
	BREAK  shift 54
	NEW  shift 55
	PRINT  shift 56
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 59
	INSTANCEOF  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	'{'  shift 41
	ADDONE  shift 65
	SUBONE  shift 66
	IDENTIFIER  reduce 46
	';'  reduce 44

	VariableDef  goto 67
	Variable  goto 20
	Type  goto 33
	StmtBlock  goto 68
	Stmt  goto 86
	SimpleStmt  goto 70
	IfStmt  goto 71
	SwitchStmt  goto 72
	RepeatUntil  goto 73
	WhileStmt  goto 74
	ForStmt  goto 75
	ReturnStmt  goto 76
	PrintStmt  goto 77
	BreakStmt  goto 78
	Expr  goto 79
	LValue  goto 80
	Call  goto 81
	Receiver  goto 82
	Constant  goto 83


state 51
	IfStmt : IF . '(' Expr ')' Stmt ElseClause  (91)

	'('  shift 87
	.  error


state 52
	SwitchStmt : SWITCH . '(' Expr ')' '{' SwitchBlock '}'  (94)

	'('  shift 88
	.  error


state 53
	ReturnStmt : RETURN . Expr  (100)
	ReturnStmt : RETURN .  (101)
	Receiver : .  (46)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 55
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 59
	INSTANCEOF  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	ADDONE  shift 89
	SUBONE  shift 90
	IDENTIFIER  reduce 46
	';'  reduce 101

	Expr  goto 91
	LValue  goto 92
	Call  goto 93
	Receiver  goto 82
	Constant  goto 83


state 54
	BreakStmt : BREAK .  (90)

	.  reduce 90


state 55
	Expr : NEW . IDENTIFIER '(' ')'  (77)
	Expr : NEW . Type '[' Expr ']'  (78)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	IDENTIFIER  shift 94
	.  error

	Type  goto 95


state 56
	PrintStmt : PRINT . '(' ExprList ')'  (102)

	'('  shift 96
	.  error


state 57
	Expr : READ_INTEGER . '(' ')'  (74)

	'('  shift 97
	.  error


state 58
	Expr : READ_LINE . '(' ')'  (75)

	'('  shift 98
	.  error


state 59
	Constant : LITERAL .  (81)

	.  reduce 81


state 60
	Expr : INSTANCEOF . '(' Expr ',' IDENTIFIER ')'  (79)

	'('  shift 99
	.  error


state 61
	Expr : '-' . Expr  (67)
	Receiver : .  (46)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 55
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 59
	INSTANCEOF  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	ADDONE  shift 89
	SUBONE  shift 90
	IDENTIFIER  reduce 46

	Expr  goto 100
	LValue  goto 92
	Call  goto 93
	Receiver  goto 82
	Constant  goto 83


state 62
	Expr : '!' . Expr  (72)
	Receiver : .  (46)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 55
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 59
	INSTANCEOF  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	ADDONE  shift 89
	SUBONE  shift 90
	IDENTIFIER  reduce 46

	Expr  goto 101
	LValue  goto 92
	Call  goto 93
	Receiver  goto 82
	Constant  goto 83


state 63
	Expr : '(' . Expr ')'  (66)
	Expr : '(' . CLASS IDENTIFIER ')' Expr  (80)
	Receiver : .  (46)

	CLASS  shift 102
	NULL  shift 46
	THIS  shift 47
	NEW  shift 55
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 59
	INSTANCEOF  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	ADDONE  shift 89
	SUBONE  shift 90
	IDENTIFIER  reduce 46

	Expr  goto 103
	LValue  goto 92
	Call  goto 93
	Receiver  goto 82
	Constant  goto 83


state 64
	StmtBlock : '{' StmtList '}' .  (24)

	.  reduce 24


state 65
	Stmt : ADDONE . Expr ';'  (38)
	Expr : ADDONE . Expr  (68)
	Receiver : .  (46)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 55
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 59
	INSTANCEOF  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	ADDONE  shift 89
	SUBONE  shift 90
	IDENTIFIER  reduce 46

	Expr  goto 104
	LValue  goto 92
	Call  goto 93
	Receiver  goto 82
	Constant  goto 83


state 66
	Stmt : SUBONE . Expr ';'  (40)
	Expr : SUBONE . Expr  (70)
	Receiver : .  (46)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 55
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 59
	INSTANCEOF  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	ADDONE  shift 89
	SUBONE  shift 90
	IDENTIFIER  reduce 46

	Expr  goto 105
	LValue  goto 92
	Call  goto 93
	Receiver  goto 82
	Constant  goto 83


state 67
	Stmt : VariableDef .  (27)

	.  reduce 27


state 68
	Stmt : StmtBlock .  (37)

	.  reduce 37

